Restructuring BLE Midi Helper library

--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -1,8 +1,8 @@
 
 all: reassemble
 
-reassemble: reassemble.c
-	gcc -I../library/BLEMidiHelper/ -o reassemble reassemble.c ../library/BLEMidiHelper/reassemble.c
+reassemble: reassemble.cpp
+	g++ -I../library/BLEMidiHelper/src/ -o reassemble reassemble.cpp ../library/BLEMidiHelper/src/BLEMidiHelper.cpp
 
 clean:
 	rm -f reassemble *.so *.so
